<resources>
    <string name="app_name">taskmaster</string>
    <string name="add_task">Add task</string>
    <string name="all_task">All task</string>
    <string name="my_tasks">My tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="task_description">Task description</string>
    <string name="add_tasks">Add task</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">task title</string>
    <string name="titlelist" />
    <string name="bodylist" />
    <string name="statuslist" />
    <string name="channel_name" />
    <string name="channel_description" />
</resources>